tests/fixtures/error_trace.txt
Traceback (most recent call last):
  File "test_file.py", line 1
    def foo(
           ^
SyntaxError: unexpected EOF while parsing
